# poker_tool

./: .gitignore  E2E_SETUP_SUMMARY.md  README.md  pyproject.toml  requirements.txt  test_fix.py
backend/: .env.example  MIGRATION_GUIDE.md  README.md  app.py  database.py  pyproject.toml  requirements.txt
backend/models/: __init__.py  hand.py  range.py  scenario.py
backend/poker_tool/: app.py  main.py
backend/poker_tool/adapters/: __init__.py  jwt_auth.py  sqlalchemy_db.py
backend/poker_tool/adapters/jwt/: __init__.py  auth.py
backend/poker_tool/adapters/sqlalchemy/: __init__.py  models.py  storage.py
backend/poker_tool/domain/: hand.py  range.py  scenario.py  user.py
backend/poker_tool/infrastructure/: __init__.py
backend/poker_tool/infrastructure/web/: __init__.py  flask_app.py
backend/poker_tool/interfaces/: __init__.py  auth.py  storage.py
backend/poker_tool/objects/: __init__.py  action.py  hand.py  position.py  range.py  range_type.py  user.py
backend/poker_tool/objects/stats/: __init__.py  global_stats.py  user_stats.py
backend/poker_tool/objects/training/: __init__.py  question.py  session.py
backend/poker_tool/ports/: auth.py  database.py
backend/poker_tool/services/: auth_service.py  range_service.py  training_service.py
backend/poker_tool/tests/: __init__.py  conftest.py
backend/poker_tool/tests/integration/: __init__.py  test_app_composition.py
backend/poker_tool/tests/unit/adapters/: __init__.py  test_jwt_auth.py  test_sqlalchemy_storage.py
backend/poker_tool/tests/unit/objects/: __init__.py  (+6 more)
backend/poker_tool/web/routes/: __init__.py
backend/routes/: __init__.py  ranges.py  stats.py  training.py
backend/tests/unit/: test_auth_service.py  test_range_service.py
(+80 files in other folders)
