[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask==3.0.3",
    "flask-cors==4.0.1",
    "flask-jwt-extended==4.6.0",
    "flask-sqlalchemy==3.1.1",
    "pandas==2.2.2",
    "python-dotenv==1.0.1",
    "setuptools==69.5.1",
]
