[project]
name = "backend"
version = "0.1.0"
description = "Poker Tool Backend API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask==3.0.3",
    "flask-cors==4.0.1",
    "flask-jwt-extended==4.6.0",
    "flask-sqlalchemy==3.1.1",
    "python-dotenv==1.0.1",
    "werkzeug==3.0.3",
]
